[gd_scene load_steps=10 format=3 uid="uid://1sh6t34b26ng"]

[ext_resource type="Script" path="res://Levels/konst/ZombieKillingMachine/zombie_killing_machine.gd" id="1_w6gkw"]
[ext_resource type="PackedScene" uid="uid://8uheip3j5n6u" path="res://Levels/konst/ZombieKillingMachine/parser/song_parser.tscn" id="2_i6l81"]
[ext_resource type="AudioStream" uid="uid://cxgbw1hatln27" path="res://Levels/konst/ZombieKillingMachine/song/song.ogg" id="3_rnfqp"]
[ext_resource type="PackedScene" uid="uid://bltm31to0fy7x" path="res://Levels/konst/ZombieKillingMachine/Player/player.tscn" id="4_0rd87"]
[ext_resource type="Theme" uid="uid://btabb6to3k26g" path="res://theme.tres" id="5_yp7iv"]
[ext_resource type="FontFile" uid="uid://dykc5kb6oblig" path="res://common/fonts/LCDBlock.ttf" id="6_jffv3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_veo8b"]
bg_color = Color(0, 0.541176, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v07n7"]
bg_color = Color(0, 0.309804, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0mif"]
size = Vector2(638, 20)

[node name="ZombieKillingMachine" type="Node2D"]
script = ExtResource("1_w6gkw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="GHUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -801.0
offset_top = 264.0
offset_right = -161.0
offset_bottom = 624.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Green" type="Button" parent="GHUi"]
layout_mode = 2
offset_left = 275.0
offset_top = 309.0
offset_right = 352.0
offset_bottom = 340.0
theme_override_styles/normal = SubResource("StyleBoxFlat_veo8b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v07n7")
text = "Green
"

[node name="Red" type="Button" parent="GHUi"]
layout_mode = 2
offset_left = 361.0
offset_top = 311.0
offset_right = 442.0
offset_bottom = 342.0
text = "Red
"

[node name="Notespawner" type="Node2D" parent="."]

[node name="Greenspawn" type="Marker2D" parent="Notespawner"]
position = Vector2(232, 0)

[node name="Redspawn" type="Marker2D" parent="Notespawner"]
position = Vector2(282, 0)

[node name="Yellowspawn" type="Marker2D" parent="Notespawner"]
position = Vector2(332, 0)

[node name="Bluespawn" type="Marker2D" parent="Notespawner"]
position = Vector2(382, 0)

[node name="Orangespawn" type="Marker2D" parent="Notespawner"]
position = Vector2(432, 0)

[node name="PlayerPosition" type="Node2D" parent="."]

[node name="Greenspawn" type="Marker2D" parent="PlayerPosition"]
position = Vector2(232, 360)

[node name="Redspawn" type="Marker2D" parent="PlayerPosition"]
position = Vector2(282, 360)

[node name="Yellowspawn" type="Marker2D" parent="PlayerPosition"]
position = Vector2(332, 360)

[node name="Bluespawn" type="Marker2D" parent="PlayerPosition"]
position = Vector2(382, 360)

[node name="Orangespawn" type="Marker2D" parent="PlayerPosition"]
position = Vector2(432, 360)

[node name="SongParser" parent="." instance=ExtResource("2_i6l81")]
song_directory = "res://Levels/konst/ZombieKillingMachine/song"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(232, 15)
stream = ExtResource("3_rnfqp")

[node name="Sidescroll" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_0rd87")]
visible = false

[node name="ScoreLabel" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = 11.0
offset_right = 55.0
offset_bottom = 51.0
theme = ExtResource("5_yp7iv")
theme_override_fonts/normal_font = ExtResource("6_jffv3")
text = "Score:"

[node name="Score" type="RichTextLabel" parent="."]
offset_left = 50.0
offset_top = 11.0
offset_right = 91.0
offset_bottom = 32.0
theme = ExtResource("5_yp7iv")
theme_override_fonts/normal_font = ExtResource("6_jffv3")
text = "0"

[node name="CDLabel" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = 188.0
offset_right = 55.0
offset_bottom = 228.0
theme = ExtResource("5_yp7iv")
theme_override_fonts/normal_font = ExtResource("6_jffv3")
text = "CD:"

[node name="Cooldown" type="RichTextLabel" parent="."]
offset_left = 62.0
offset_top = 188.0
offset_right = 103.0
offset_bottom = 209.0
theme = ExtResource("5_yp7iv")
theme_override_fonts/normal_font = ExtResource("6_jffv3")
text = "0"

[node name="PierceLabel" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = 202.0
offset_right = 55.0
offset_bottom = 242.0
theme = ExtResource("5_yp7iv")
theme_override_fonts/normal_font = ExtResource("6_jffv3")
text = "Pierce:"

[node name="Pierce" type="RichTextLabel" parent="."]
offset_left = 62.0
offset_top = 202.0
offset_right = 103.0
offset_bottom = 223.0
theme = ExtResource("5_yp7iv")
theme_override_fonts/normal_font = ExtResource("6_jffv3")
text = "0"

[node name="NoteDespawnZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteDespawnZone"]
position = Vector2(319, 360)
shape = SubResource("RectangleShape2D_m0mif")

[connection signal="parsing_end" from="SongParser" to="." method="_on_song_parser_parsing_end"]
[connection signal="move" from="Player" to="." method="_on_player_move"]
[connection signal="area_shape_entered" from="NoteDespawnZone" to="." method="_on_note_despawn_zone_area_shape_entered"]
